--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   </head>
   <body class="c21 doc-content">
     <p class="c10"><span class="c11"><span style="font-size: 20pt; font-family: \"Verdana\"">Matej Đanić</span></span></p>
-    <p class="c10"><span class="c12">matej.danic</span><span class="c12"><a class="c13" href="mailto:name@gmail.com">@gmail.com</a></span><span class="c12">&nbsp;| matej-danic.from.hr | </span><span class="c12"><a class="c13" href="https://www.google.com/url?q=https://www.hardwareishard.net/portfolio-database&amp;sa=D&amp;source=editors&amp;ust=1721428006566516&amp;usg=AOvVaw2V-V-CUBfrdo8jm3_JZ4dg">github.com/</a></span><span class="c12">MatejDanic</span></p>
-    <p class="c0"><span class="c12 c19"><a class="c13" href="https://www.google.com/url?q=https://old.reddit.com/r/EngineeringResumes/wiki/index%23wiki_skills&amp;sa=D&amp;source=editors&amp;ust=1721428006566883&amp;usg=AOvVaw3JognWHJ-MOzwmG4sdQTuj">Skills</a></span></p>
+    <p class="c10"><span class="c12"><a class="c13" href="mailto:matej.danic@gmail.com">matej.danic@gmail.com</a></span><span class="c12">&nbsp;| <a class="c13" href="https://matej-danic.from.hr">matej-danic.from.hr</a> | </span><span class="c12"><a class="c13" href="https://github.com/MatejDanic">github.com/MatejDanic</a></span></p>
+    <p class="c0"><span class="c12 c19">Skills</span></p>
     <p class="c1"><span class="c5">Languages</span><span class="c5">:</span><span class="c2">&nbsp;Java, C#, JavaScript/HTML/CSS, Python</span></p>
     <p class="c1"><span class="c5">Technologies: </span><span class="c2">Spring Boot, .NET, React.js, Git, CI/CD, PostgreSQL, SQL Server, MongoDB, Heroku</span></p>
     <p class="c1"><span class="c5">Salesforce:</span><span class="c2">&nbsp;Apex, SOQL, Lightning Web Components, Flows, Veeva CRM, Mulesoft</span></p>
     <p class="c1 c15"><span class="c7"></span></p>
-    <p class="c0"><span class="c12 c19"><a class="c13" href="https://www.google.com/url?q=https://old.reddit.com/r/EngineeringResumes/wiki/index%23wiki_work_experience&amp;sa=D&amp;source=editors&amp;ust=1721428006567557&amp;usg=AOvVaw2ER0OlBH9Fv-WNnobxkc1W">Experience</a></span></p>
+    <p class="c0"><span class="c12 c19">Experience</span></p>
     <p class="c1"><span class="c12">Triple Innovations &ndash; Zagreb, Budmanijeva 5</span></p>
     <p class="c1"><span class="c5">Development Team Leader</span><span class="c12" style="float:right;">Oct 2023 &ndash; Present</span></p>
     <ul class="c4 lst-kix_gorsd9gsba4m-0 start">
@@ -48,7 +48,7 @@
     <ul class="c4 lst-kix_3ee4ncqpb4o2-0 start">
       <li class="c1 c6 li-bullet-0"><span class="c2">Developed a variant of the dice game Yahtzee as a web application using Spring Boot, a PostgreSQL database for player, game and score storage and a user-friendly mobile interface in React.js</span></li>
       <li class="c1 c6 li-bullet-0"><span class="c2">Implemented user registration with JWT based auth. and multiplayer mode over WebSocket protocol</span></li>
-      <li class="c1 c6 li-bullet-0"><span class="c2">Deployed on Heroku and available on jamb.com.hr, achieving 3000+ recorded playing sessions to date</span></li>
+      <li class="c1 c6 li-bullet-0"><span class="c2">Deployed on Heroku and available on <a class="c13" href="https://jamb.com.hr">jamb.com.hr</a>, achieving 3000+ recorded playing sessions to date</span></li>
     </ul>
     <p class="c1 c15"><span class="c7"></span></p>
     <p class="c0"><span class="c12 c19">Education</span></p>
@@ -62,7 +62,7 @@
       <li class="c1 c6 li-bullet-0"><span class="c12">Software Engineering and Information Systems</span></li>
     </ul>
     <p class="c1 c15"><span class="c7"></span></p>
-    <p class="c0"><span class="c3">Certifications</span></p>
+    <p class="c0"><span class="c3"><a class="c13" href="https://trailhead.salesforce.com/en/credentials/certification-detail-print/?searchString=sbLigzX6untkgBRP2sMsVdrvyP6aNSzwc1/XRQaTgNvPgS9aSQuOyRWNePvS1BHt">Certifications</a></span></p>
     <p class="c1"><span class="c5">Salesforce: </span><span class="c12">Platform Developer I, Platform Developer II, JavaScript Developer I, Platform App Builder, Associate, AI Associate</span></p>
     <p class="c1"><span class="c5">Mulesoft: </span><span class="c2">Mulesoft Developer I, Mulesoft Associate</span></p>
     <p class="c1 c15"><span class="c7"></span></p>
