set links to open in new tab

--- a/index.html
+++ b/index.html
@@ -14,73 +14,72 @@
 		<meta property="og:title" content="Matej Đanić" />
 		<meta property="og:description" content="Senior Software Engineer and Team Leader with experience in multiple enterprise-level projects."/>
 		<meta property="og:image" content="image.jpg"/>
-		
+		<style>
+			body {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+			.avatar-container {
+				position: relative;
+				display: inline-block;
+			}
+			.avatar {
+				display: block;
+				width: 200px;
+			}
+			.resume {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+			}
+			.title {
+				font-size: xx-large;
+				font-weight: bold;
+				margin: 10px;
+			}
+			.links {
+				margin-top: 50px;
+			}
+			.links a {
+				margin: 0 10px;
+			}
+			.contact {
+				border-top: 1px solid gray;
+				margin-top: 200px;
+			}
+			.contact a {
+				text-decoration: none;
+				color: black;
+			}
+			.contact a:hover {
+				text-decoration: underline;
+			}
+			a img:hover {
+				opacity: 0.7;
+			}
+		</style>
 	</head>
 	<body>
 		<div style="text-align: center;">
 			<div class="avatar-container">
 				<img src="matej.png" class="avatar"/>
-				<a href="MatejDanic-Resume.pdf" class="resume"><img src="pdf.svg" title="Resume"/></a>
+				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Resume"/></a>
 			</div>
 			<p class="title">Matej Đanić</p>
 			<p>Development Team Leader at Triple Innovations Ldt.</a></p>
 			<div class="links">
-				<a href="https://jamb.com.hr"><img src="yamb.svg" title="jamb.com.hr"/></a>
+				<a href="https://jamb.com.hr" target="_blank" rel="noopener noreferrer"><img src="yamb.svg" title="jamb.com.hr"/></a>
 				<br/>
 				<br/>
 				<br/>
-				<a href="https://www.linkedin.com/in/matej-%C4%91ani%C4%87-2698771ab/"><img src="linkedin.svg"/></a>
-				<a href="https://github.com/MatejDanic"><img src="github.svg"/></a>
-				<a href="https://www.salesforce.com/trailblazer/matej-danic"><img src="trailhead.svg"/></a>
+				<a href="https://www.linkedin.com/in/matej-%C4%91ani%C4%87-2698771ab/" target="_blank" rel="noopener noreferrer"><img src="linkedin.svg"/></a>
+				<a href="https://github.com/MatejDanic" target="_blank" rel="noopener noreferrer"><img src="github.svg"/></a>
+				<a href="https://www.salesforce.com/trailblazer/matej-danic" target="_blank" rel="noopener noreferrer"><img src="trailhead.svg"/></a>
 			</div>
 			<div class="contact">
 				<br/><a href="mailto:matej.danic@gmail.com">matej.danic@gmail.com</a>
 			</div>
 		</div>
 	</body>
-	<style>
-		body {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
-		.avatar-container {
-			position: relative;
-			display: inline-block;
-		}
-		.avatar {
-			display: block;
-			width: 200px;
-		}
-		.resume {
-			position: absolute;
-			bottom: 0;
-			right: 0;
-		}
-		.title {
-			font-size: xx-large;
-			font-weight: bold;
-			margin: 10px;
-		}
-		.links {
-			margin-top: 50px;
-		}
-		.links a {
-			margin: 0 10px;
-		}
-		.contact {
-			border-top: 1px solid gray;
-			margin-top: 200px;
-		}
-		.contact a {
-			text-decoration: none;
-			color: black;
-		}
-		.contact a:hover {
-			text-decoration: underline;
-		}
-		a img:hover {
-			opacity: 0.7;
-		}
-	</style>
 </html>
