--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<meta property="og:image" content="image.jpg"/>
 		<style>
 			body {
+				font-family: Verdana, sans-serif;
+				font-family: "Verdan";
 				display: flex;
 				align-items: center;
 				justify-content: center;
