fix company name

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Resume"/></a>
 			</div>
 			<p class="title">Matej Đanić</p>
-			<p>Development Team Leader at Triple Innovations Ldt.</a></p>
+			<p>Development Team Leader at Triple Innovations</a></p>
 			<div class="links">
 				<a href="https://jamb.com.hr" target="_blank" rel="noopener noreferrer"><img src="yamb.svg" title="jamb.com.hr"/></a>
 				<br/>
