--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Matej Đanić</title>
 		<link rel="canonical" href="https://matej-danic.from.hr" />
-		<link rel="icon" href="favicon.svg">
+		<link rel="icon" href="favicon.ico">
 		<meta charset="UTF-8">
 		<meta name="description" content="Senior Software Engineer and Team Leader with experience in multiple enterprise-level projects.">
 		<meta name="keywords" content="Matej, Đanić, Resume">
