--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 		<title>Matej Đanić</title>
 		<link rel="canonical" href="https://matej-danic.from.hr" />
 		<link rel="icon" href="favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="manifest" href="site.webmanifest">
 		<meta charset="UTF-8">
 		<meta name="description" content="Senior Software Engineer and Team Leader with experience in multiple enterprise-level projects.">
 		<meta name="keywords" content="Matej, Đanić, Resume">
@@ -14,6 +19,10 @@
 		<meta property="og:title" content="Matej Đanić" />
 		<meta property="og:description" content="Senior Software Engineer and Team Leader with experience in multiple enterprise-level projects."/>
 		<meta property="og:image" content="image.jpg"/>
+    	<meta name="theme-color" content="#000000" />
+    	<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="msapplication-TileColor" content="#011627">
+		<meta name="theme-color" content="#011627">
 		<style>
 			body {
 				font-family: Verdana, sans-serif;
