--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<br/>
 				<br/>
 				<br/>
-				<a href="https://www.linkedin.com/in/matej-%C4%91ani%C4%87-2698771ab/" target="_blank" rel="noopener noreferrer"><img src="linkedin.svg"/></a>
+				<a href="https://www.linkedin.com/in/matej-danic" target="_blank" rel="noopener noreferrer"><img src="linkedin.svg"/></a>
 				<a href="https://github.com/MatejDanic" target="_blank" rel="noopener noreferrer"><img src="github.svg"/></a>
 				<a href="https://www.salesforce.com/trailblazer/matej-danic" target="_blank" rel="noopener noreferrer"><img src="trailhead.svg"/></a>
 			</div>
