modified favicon and image extension

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<body>
 		<div style="text-align: center;">
 			<div class="avatar-container">
-				<img src="matej.png" class="avatar"/>
+				<img src="matej.webp" class="avatar"/>
 				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Resume"/></a>
 			</div>
 			<p class="title">Matej Đanić</p>
