--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="manifest" href="site.webmanifest">
 		<meta charset="UTF-8">
 		<meta name="description" content="Senior Software Engineer and Team Leader with experience in multiple enterprise-level projects.">
-		<meta name="keywords" content="Matej, Đanić, Resume">
+		<meta name="keywords" content="Matej, Đanić, Resume, CV">
 		<meta name="author" content="Matej Đanić">
 		<meta name="viewport" content="width=device-width initial-scale=1.0">
 		<meta name="googlebot-news" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -75,7 +75,7 @@
 		<div style="text-align: center;">
 			<div class="avatar-container">
 				<img src="matej.webp" class="avatar"/>
-				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Resume"/></a>
+				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Matej Danic - CV"/></a>
 			</div>
 			<p class="title">Matej Đanić</p>
 			<p>Development Team Leader at Triple Innovations</a></p>
