--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div style="text-align: center;">
 			<div class="avatar-container">
 				<img src="matej.webp" class="avatar"/>
-				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Matej Danic - CV"/></a>
+				<a href="MatejDanic-Resume.pdf" class="resume" target="_blank" rel="noopener noreferrer"><img src="pdf.svg" title="Matej Đanić - CV"/></a>
 			</div>
 			<p class="title">Matej Đanić</p>
 			<p>Development Team Leader at Triple Innovations</a></p>
